--- a/adrian/config/linux/.tmux.conf
+++ b/adrian/config/linux/.tmux.conf
@@ -19,8 +19,9 @@ set-window-option -g window-status-current-bg default
 
 # pane border
 set-option -g pane-border-fg colour240 #base01
-set-option -g pane-active-border-fg colour235 #base02 
-#set-option -g pane-active-border-fg colour33 #blue
+#set-option -g pane-active-border-fg colour235 # base02 
+set-option -g pane-active-border-fg colour230 # base3
+#set-option -g pane-active-border-fg colour160 # red
 
 # message text
 set-option -g message-bg colour235 #base02
@@ -30,14 +31,15 @@ set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 # clock
-set-window-option -g clock-mode-colour red #green
+set-window-option -g clock-mode-colour blue #blue
 
 set -g status-interval 2
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
-set -g status-left "#[fg=magenta]#H #[fg=black]• #[fg=magenta,bright]#(uname -r | cut -c 1-6)#[default]"
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load --colors --interval 2) #[fg=red,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=cyan,bright,bg=default]%a %l:%M:%S %p#[default] #[fg=yellow]%Y-%m-%d'
+set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 2) #[fg=red,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=cyan,bright,bg=default]%a %l:%M:%S %p#[default] #[fg=yellow]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
