--- a/adrian/config/linux/.tmux.conf
+++ b/adrian/config/linux/.tmux.conf
@@ -20,8 +20,9 @@ set-window-option -g window-status-current-bg default
 # pane border
 set-option -g pane-border-fg colour240 #base01
 #set-option -g pane-active-border-fg colour235 # base02 
-set-option -g pane-active-border-fg colour230 # base3
+#set-option -g pane-active-border-fg colour230 # base3
 #set-option -g pane-active-border-fg colour160 # red
+set-option -g pane-active-border-fg colour31 # blue
 
 # message text
 set-option -g message-bg colour235 #base02
